--- a/package.json
+++ b/package.json
@@ -3,18 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "framer-motion": "^8.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.3",
     "react-router-dom": "5.3.3",
     "react-scripts": "5.0.1",
     "styled-components": "^6.0.6",
     "web-vitals": "^2.1.4",
-    "framer-motion": "^8.4.3",
-    "react-markdown": "^8.0.3"
+    "swiper": "^8.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
