--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/base": "^5.0.0-beta.13",
     "@mui/material": "^5.14.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -17,8 +18,8 @@
     "react-router-dom": "5.3.3",
     "react-scripts": "5.0.1",
     "styled-components": "^6.0.6",
-    "web-vitals": "^2.1.4",
-    "swiper": "^8.4.4"
+    "swiper": "^8.4.4",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
